--- a/index.html
+++ b/index.html
@@ -1,42 +1,29 @@
 <!DOCTYPE html>
-
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>IFrame Event Trigger</title>
+<style>
+    /* Add your CSS styles here */
+</style>
+</head>
+<body>
 
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
-      rel="stylesheet"
-    />
+<button id="triggerButton">Trigger Event</button>
 
-    <link rel="stylesheet" href="style.css" />
+<script>
+document.addEventListener("DOMContentLoaded", function() {
+    // Find the button element
+    var triggerButton = document.getElementById('triggerButton');
 
-    <title>Home</title>
-  </head>
+    // Add a click event listener to the button
+    triggerButton.addEventListener('click', function() {
+        // Send a message to the parent window
+        window.parent.postMessage('buttonClicked', '*');
+    });
+});
+</script>
 
-  <body>
-    <nav>
-      <div class="heading">
-        <h4>CHRYSLER</h4>
-      </div>
-
-      <ul class="nav-links">
-        <li><a class="active" href="index.html">Home</a></li>
-
-        <li><a href="pages/services.html">Services</a></li>
-
-        <li><a href="pages/contact.html">Contact Us</a></li>
-
-        <li><a href="pages/jeep.html">Contact Jeep</a></li>
-
-        <li><a href="https://uat.e-shop.chrysler.com/ore" target="_blank">Chrysler E-Shop</a></li>
-        
-      </ul>
-    </nav>
-
-    <div class="body-text">
-      <h1>This page <u>does not have any</u> Embedded Chat.</h1>
-    </div>
-  </body>
+</body>
 </html>
