--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </style>
 </head>
 <body>
-
+<h1>Welcome to Gen AI Tool POC</h1>
+<h5>Click on the button below to trigger an event to Salesforce: </h5>
 <button id="triggerButton">Trigger Event</button>
 
 <script>
