--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 </head>
 <body>
 <h1>Welcome to Gen AI Tool POC</h1>
+<h4>URL in iFrame: https://amitgietee.github.io/poc/</h4>
 <h5>Click on the button below to trigger an event to Salesforce:</h5>
-<button id="triggerButton">Trigger Event</button>
+<input type="text" id="messageInput" placeholder="Enter your message">
+<button id="triggerButton">Trigger Event to SF</button>
 
 <script>
 document.addEventListener("DOMContentLoaded", function() {
@@ -21,8 +23,9 @@ document.addEventListener("DOMContentLoaded", function() {
     // Add a click event listener to the button
     triggerButton.addEventListener('click', function() {
         // Send a message to the parent window
+        var message = document.getElementById('messageInput').value;
         console.log('index.html>>> Button Clicked');
-        window.parent.postMessage('buttonClicked', '*');
+        window.parent.postMessage(message, '*');
     });
 });
 </script>
