--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 <h1>Welcome to Gen AI Tool POC</h1>
 <h4>URL in iFrame: https://amitgietee.github.io/poc/</h4>
 <h5>Click on the button below to trigger an event to Salesforce:</h5>
-<input type="text" id="messageInput" placeholder="Enter your message">
-<button id="triggerButton">Trigger Event to SF</button>
+<!--<input type="text" id="messageInput" placeholder="Enter your message">-->
+<textarea id="messageInput" name="iFrameMessageInput" rows="5" cols="80"></textarea>
+<button id="triggerButton">Send Message to SF</button>
 
 <script>
 document.addEventListener("DOMContentLoaded", function() {
