--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <h4>URL in iFrame: https://amitgietee.github.io/poc/</h4>
 <h5>Click on the button below to trigger an event to Salesforce:</h5>
 <!--<input type="text" id="messageInput" placeholder="Enter your message">-->
-<textarea id="messageInput" name="iFrameMessageInput" rows="5" cols="80"></textarea>
+<textarea id="messageInput" name="iFrameMessageInput" rows="5" cols="80"></textarea><br><br>
 <button id="triggerButton">Send Message to SF</button>
 
 <script>
