--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body>
 <h1>Welcome to Gen AI Tool POC</h1>
 <h4>URL in iFrame: https://amitgietee.github.io/poc/</h4>
-<h5>Click on the button below to trigger an event to Salesforce:</h5>
+<h5>Add your message below and click on the button to send the message to Salesforce:</h5>
 <!--<input type="text" id="messageInput" placeholder="Enter your message">-->
-<textarea id="messageInput" name="iFrameMessageInput" rows="5" cols="80"></textarea><br><br>
+<textarea id="messageInput" name="iFrameMessageInput" rows="5" cols="60"></textarea><br><br>
 <button id="triggerButton">Send Message to SF</button>
 
 <script>
